<resources>
    <string name="app_name">Raka\'at | ركعات</string>
    <string name="kibla">Kibla</string>
    <string name="prayer">Prayer</string>
    <string name="privacy" translatable="false">● PRIVACY POLICY ●</string>
    <string name="instagram" translatable="false">● @SCUFFEDBOTS ●</string>
    <string name="back">Go back</string>
    <string name="betterquality">Improve accuracy</string>
    <string name="kiblatitle">Compass lights up when facing Kibla</string>
    <string name="howtouse">Tutorial</string>
    <string name="sajadat">Sajadat</string>
    <string name="noshow">Don\'t show again</string>
    <string name="ok">Okay</string>
    <string name="d">then press Start.</string>
    <string name="f">Sajda for example under your chest for accuracy</string>
    <string name="crd" translatable="false"><![CDATA[● Credits to brushez.com for the font.]]></string>
    <string name="crds" translatable="false"><![CDATA[● This app does not save any of your data, information disappears when the app is closed.]]></string>
    <string name="crds2" translatable="false"><![CDATA[● Credits for the background go to Mouh The Philosopher on Youtube.]]></string>
    <string name="ff">(dark environments are not recommended)</string>
    <string name="lmfao">Improve accuracy</string>
    <string name="lol">Move your phone around in the shape of 8 three times</string>
    <string name="yesoyes">(away from computers and magnetic stuff)</string>
    <string name="cbon">then press on Done.</string>
    <string name="done">Done</string>
    <string name="one">One Raka\'a</string>
    <string name="two">Two raka\'at</string>
    <string name="three">Three raka\'at</string>
    <string name="four">Four Raka\'at</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="back2">Go back</string>
    <string name="force">Prayer Cop</string>
    <string name="fajrtitle">Fajr</string>
    <string name="dohrtitle">Dhuhr</string>
    <string name="asrtitle">A\'sr</string>
    <string name="maghrebtitle">Maghrib</string>
    <string name="ishatitle">Isha</string>
    <string name="five" translatable="false">5</string>
    <string name="setting1">Brightness of numbers</string>
    <string name="zero" translatable="false">0</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="tahia">Tahia</string>
    <string name="pressbackagainenglish">Press back again to exit</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="delaybeforecounting">Count down</string>
    <string name="threeer" translatable="false">3</string>
    <string name="rise">Rise</string>
    <string name="low_light">It\'s too dark!</string>
    <string name="threeseconds">Three seconds</string>
    <string name="fiveseconds">Five seconds</string>
    <string name="zeroseconds">None</string>
    <string name="a">Your phone must be covered from light during a</string>
    <string name="rakaat">Raka\'at</string>
    <string name="app_name_arabe">Raka\'at | ركعات</string>
    <string name="app_name2_arabe">Raka\'at | ركعات</string>
    <string name="app_name2">Raka\'at | ركعات</string>
    <string name="yesoyes_arabe">(بعيدا عن الحواسيب و أي حقل مغناطيسي قوي)</string>
    <string name="ff_arabe">(لا يُنْصح الإستِخْدام في اللأماكِن شديدة الظُلْمة)</string>
    <string name="pressbackagainenglish_arabe">إضغط مرّة أُخرى للخروج</string>
    <string name="four_arabe">أرْبعةْ ركعاتْ</string>
    <string name="start_arabe">إبدئ</string>
    <string name="setting1_arabe">إضاءة الأرقام</string>
    <string name="low_light_arabe">الإضاءة خافِتة جِدا</string>
    <string name="tahia_arabe">التحية</string>
    <string name="back_arabe">أرجِع</string>
    <string name="sajadat_arabe">السجدات</string>
    <string name="f_arabe">السجود، مثلا تحت الصدر لكي يعمل التطبيق بدقة</string>
    <string name="rise_arabe">الشروق</string>
    <string name="prayer_arabe">الصلاة</string>
    <string name="dohrtitle_arabe">الظهر</string>
    <string name="delaybeforecounting_arabe">العد التنازُلي</string>
    <string name="ishatitle_arabe">العشاء</string>
    <string name="asrtitle_arabe">العصر</string>
    <string name="fajrtitle_arabe">الفجر</string>
    <string name="kibla_arabe">القبلة</string>
    <string name="maghrebtitle_arabe">المغرب</string>
    <string name="betterquality_arabe">تحسين الدقة</string>
    <string name="lmfao_arabe">تحسين الدِّقة</string>
    <string name="done_arabe">تم</string>
    <string name="saved_arabe">تمَّ الحِفظ</string>
    <string name="stop_arabe">توقف</string>
    <string name="kiblatitle_arabe">تُضيئ البوصلة عند مُقابلتِكَ للقبلة</string>
    <string name="threeseconds_arabe">ثلاث ثواني</string>
    <string name="three_arabe">ثلاث ركعاتْ</string>
    <string name="d_arabe">ثم إضغط على إبدئ.</string>
    <string name="cbon_arabe">ثم إضغط على تم.</string>
    <string name="ok_arabe">حسنا</string>
    <string name="save_arabe">حِفظ</string>
    <string name="fiveseconds_arabe">خمس ثواني</string>
    <string name="one_arabe">ركْعة واحِدة</string>
    <string name="two_arabe">ركْعتيْن</string>
    <string name="force_arabe">شُرطي الصّلاة</string>
    <string name="a_arabe">ضع الهاتف في مكان حيث تحجب عنه الضوء عند</string>
    <string name="back2_arabe">عُدْ</string>
    <string name="lol_arabe">قم بتحريك الهاتف على شكل الرقم 8 ثلاث مرات</string>
    <string name="howtouse_arabe">كيفية الإستعمال</string>
    <string name="zeroseconds_arabe">لا أحتاج</string>
    <string name="noshow_arabe">لا تُظهِر مجددا</string>
    <string name="rakaat_arabe">الركعات</string>
    <string name="pm">م</string>
    <string name="am">ص</string>
    <string name="joinprayer_arabic">صلّي</string>
    <string name="joinprayer">Pray</string>
    <string name="satarabe">السبت</string>
    <string name="sunarabe">الأحد</string>
    <string name="monarabe">الإثنين</string>
    <string name="tuearabe">الثلاثاء</string>
    <string name="wedarabe">الأربعاء</string>
    <string name="thurarabe">الخميس</string>
    <string name="friarabe">الجمعة</string>
    <string name="janarabe">جانفي</string>
    <string name="febarabe">فيفري</string>
    <string name="mararabe">مارس</string>
    <string name="aprarabe">أفريل</string>
    <string name="maarabe">ماي</string>
    <string name="junarabe">يونيو</string>
    <string name="jularabe">يوليو</string>
    <string name="augusarabe">أغسطس</string>
    <string name="separabe">سبتمبر</string>
    <string name="octarabe">اكتوبر</string>
    <string name="novarabe">نوفمبر</string>
    <string name="decarabe">ديسمبر</string>
    <string name="pmer">PM</string>
    <string name="satu">Sat</string>
    <string name="sunu">Sun</string>
    <string name="monu">Mon</string>
    <string name="tueu">Tue</string>
    <string name="wedu">Wed</string>
    <string name="thuru">Thu</string>
    <string name="fridu">Fri</string>
    <string name="Jamo3a">Jamu\'a</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="mao">Ma</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="aug">Aug</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="muharram_arabe">مُحَرَّم</string>
    <string name="safar_arabe">صَفَر</string>
    <string name="rabialawwal_arabe">رَبِيْعُ الأَوّل</string>
    <string name="rabialthani_arabe">رَبِيْعُ الثَّانِي</string>
    <string name="jumadialawwal_arabe">جَمَادِي الأَوّل</string>
    <string name="jumadialthani_arabe">جَمَادِي الثَّانِي</string>
    <string name="rajab_arabe">رَجَب</string>
    <string name="chaaban_arabe">شَعْبَان</string>
    <string name="ramadhan_arabe">رَمَضَان</string>
    <string name="shawwal_arabe">شَوَّال</string>
    <string name="dhualqaada_arabe">ذُوالْقَعْدَة</string>
    <string name="dhualhijja_arabe">ذُوالْحِجَّة</string>
    <string name="muharram">Muḥarram</string>
    <string name="safar">Safar</string>
    <string name="rabialawwal">Rabiʿ al-Awwal</string>
    <string name="rabialthani">Rabiʿ al-Thani</string>
    <string name="jumadialawwal">Jumada al-Ula</string>
    <string name="jumadialthani">Jumada al-Thani</string>
    <string name="rajab">Rajab</string>
    <string name="chaaban">Sha‘ban</string>
    <string name="ramadhan">Ramadan</string>
    <string name="shawwal">Shawwal</string>
    <string name="dhualqaada">Dhu al-Qa‘dah</string>
    <string name="dhualhijja">Dhu al-Hijjah</string>
    <string name="brak"><![CDATA[>]]></string>
    <string name="brak2"><![CDATA[<]]></string>
    <string name="stats">Statistics</string>
    <string name="alltime">All time</string>
    <string name="past7days">Past 7 days</string>
    <string name="today">Today</string>
    <string name="yourprayers">Your prayers</string>
    <string name="stats_arabe">احصائيات</string>
    <string name="yourprayers_arabe">كم صليت حتى الآن</string>
    <string name="today_arabe">اليوم</string>
    <string name="past7days_arabe">السبع أيام</string>
    <string name="pastmonth">Past Month</string>
    <string name="pastmonth_arabe">الثلاثين يوم</string>
    <string name="past6months">Past 6 Months</string>
    <string name="past6months_arabe">السِّت أشهُر</string>
    <string name="pastyear">Past Year</string>
    <string name="pastyear_arabe">السّنة الماضية</string>
    <string name="alltime_arabe">منْذُ فتْح التّطبيق</string>
    <string name="close">أغلق</string>
    <string name="closenglish">Dismiss</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="junee">June</string>
    <string name="julyy">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="nd">nd</string>
    <string name="rd">rd</string>
    <string name="st">st</string>
    <string name="th">th</string>
    <string name="ar">ar</string>
    <string name="en">en</string>
    <string name="slat">slat</string>
    <string name="justforce">force</string>
    <string name="justforce3">force3</string>
    <string name="waytooearly">It\'s way too early to pray </string>
    <string name="waytooearly_arabe"> مُبكّر جدا لصلاة </string>
    <string name="didyoupray">did you pray </string>
    <string name="didyoupray_arabe"> هل صليت </string>
    <string name="questionmark_arabe">؟</string>
    <string name="needdetector_arabe">هل تريد إستخدام المستشعر أم صلّيت من قبل؟</string>
    <string name="detectoryes_arabe">أُريد مستشعر الرّكعات</string>
    <string name="detectorno_arabe">صليت من قبل</string>
    <string name="select_an_adan_arabe">إختيار مؤذّن</string>
    <string name="adan1_arabe">مغربي (أمين كعسيس)</string>
    <string name="adan2_arabe">مغربي (أنس التازي)</string>
    <string name="adan3_arabe">شرقي (أحمد كريم)</string>
    <string name="adan4_arabe">مقام الحجاز (فرحان إسماعيل)</string>
    <string name="adan5_arabe">مكّي (مشاري العفاسي)</string>
    <string name="adan6_arabe">مدني (علي ملا)</string>
    <string name="nothanks_arabe">لا شكرا</string>
    <string name="request_text_arabe">لتأكيد عمل الآذان في هواتف هواوي، يتوجب فتح قائمة التطبيقات المحمية و تفعيل تطبيق ركعات</string>
    <string name="go_to_protected_arabe">إفتح قائمة التطبيقات المحمية</string>
    <string name="idid_arabe">قمت بذلك!</string>
</resources>