<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:background="@drawable/simpelbackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fixbig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/howtouse_arabe"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fixsmall1"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/a_arabe"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fixsmall2"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/f_arabe"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fixsmall3"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/d_arabe"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fixsmall4"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/ff_arabe"
            android:textColor="#df4320"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="304dp"
            android:layout_height="138dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/salat" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10sp"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="10sp">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:text="@string/ok_arabe"
                android:background="@drawable/buttons"
                android:textColor="#FFFFFF"
                android:focusable="true" />

            <Button
                android:id="@+id/btn_never"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:text="@string/noshow_arabe"
                android:background="@drawable/buttons"
                android:textColor="#FFFFFF"
                android:layout_marginStart="10sp"
                android:focusable="true"
                android:layout_marginLeft="10sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>