<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/selectionbackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/darksimpelbackground"
    android:layout_centerInParent="true"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingTop="31dp"
    android:paddingBottom="31dp"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/selectiontitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="27sp"
        android:textAllCaps="false"
        android:text="@string/select_an_adan_arabe"/>
    <TextView
        android:id="@+id/adan1"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="@dimen/distancebetweenadanselections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/adan1_arabe"
        android:paddingTop="@dimen/biglollers"
        android:background="@drawable/adanselectionbackgrounder"
        android:paddingBottom="@dimen/biglollers"
        android:textSize="@dimen/adantextsizer"
        android:gravity="center"/>
    <TextView
        android:id="@+id/adan2"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="@dimen/distancebetweenadanselections"
        android:layout_width="match_parent"
        android:text="@string/adan2_arabe"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/biglollers"
        android:background="@drawable/adanselectionbackgrounder"
        android:paddingBottom="@dimen/biglollers"
        android:textColor="@color/white"
        android:textSize="@dimen/adantextsizer"
        android:gravity="center"/>
    <TextView
        android:id="@+id/adan3"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="@dimen/distancebetweenadanselections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adan3_arabe"
        android:textColor="@color/white"
        android:paddingTop="@dimen/biglollers"
        android:background="@drawable/adanselectionbackgrounder"
        android:paddingBottom="@dimen/biglollers"
        android:textSize="@dimen/adantextsizer"
        android:gravity="center"/>
    <TextView
        android:id="@+id/adan4"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="@dimen/distancebetweenadanselections"
        android:layout_width="match_parent"
        android:background="@drawable/adanselectionbackgrounder"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/adan4_arabe"
        android:paddingTop="@dimen/biglollers"
        android:paddingBottom="@dimen/biglollers"
        android:textSize="@dimen/adantextsizer"
        android:gravity="center"/>
    <TextView
        android:id="@+id/adan5"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="@dimen/distancebetweenadanselections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingTop="@dimen/biglollers"
        android:paddingBottom="@dimen/biglollers"
        android:text="@string/adan5_arabe"
        android:textSize="@dimen/adantextsizer"
        android:background="@drawable/adanselectionbackgrounder"
        android:gravity="center"/>
    <TextView
        android:id="@+id/adan6"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:text="@string/adan6_arabe"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/adanselectionbackgrounder"
        android:paddingTop="@dimen/biglollers"
        android:paddingBottom="@dimen/biglollers"
        android:textSize="@dimen/adantextsizer"
        android:gravity="center"/>
</LinearLayout>