<LinearLayout
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/darksimpelbackground"
    android:layout_centerInParent="true"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingTop="31dp"
    android:paddingBottom="31dp"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="27sp"
        android:textAllCaps="false"
        android:text="@string/request_text_arabe"/>
    <TextView
        android:id="@+id/gotoprotectedd"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/darkbuttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:text="@string/go_to_protected_arabe"/>
    <TextView
        android:id="@+id/dismiss"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/darkbuttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:text="@string/nothanks_arabe"/>
    <TextView
        android:id="@+id/idid"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/darkbuttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:text="@string/idid_arabe"/>
</LinearLayout>