<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simpelbackground"
    tools:context=".PrivacyPolicy">

    <LinearLayout
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:textColor="#444444"
        android:orientation="vertical"
        android:padding="40dp">
        <TextView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crds2"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crds"
            android:textColor="#ffffff"
            android:layout_marginBottom="15dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crd"
            android:textColor="#ffffff"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center">
            <Button
                android:id="@+id/button2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:onClick="backClicked"
                android:background="@drawable/buttons"
                android:text="@string/back" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>