<LinearLayout
    android:id="@+id/selectionbackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/darksimpelbackground"
    android:layout_centerInParent="true"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingTop="31dp"
    android:paddingBottom="31dp"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/selectiontitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="27sp"
        android:textAllCaps="false"
        android:text="@string/needdetector_arabe"/>
    <Button
        android:id="@+id/selectionhome"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/darkbuttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:text="@string/detectoryes_arabe"/>
    <Button
        android:id="@+id/selectionmosque"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/darkbuttons"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:text="@string/detectorno_arabe"/>
</LinearLayout>