<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/darksimpelbackground"
    android:id="@+id/settings"
    android:gravity="center_horizontal">

    <Button
        android:textAllCaps="false"
        android:id="@+id/arrow"
        android:background="@drawable/darkarrowbutton"
        android:layout_width="250dp"
        android:text="@string/save_arabe"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">
        <SeekBar
            android:layout_weight=".25"
            android:id="@+id/brightness"
            android:progress="1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:max="100"
            android:gravity="center"
            android:thumb="@drawable/thumb"
            android:maxHeight="10dp"
            android:progressDrawable="@drawable/volume_control"/>
        <TextView
            android:gravity="center"
            android:layout_weight=".75"
            android:id="@+id/brightnesstitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/setting1_arabe"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:layout_weight=".12"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="3"
            android:baselineAligned="false">
            <Button
                android:textAllCaps="false"
                android:layout_weight="1"
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroseconds_arabe"
                android:background="@drawable/darkzerodelayunselected"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            <Button
                android:textAllCaps="false"
                android:layout_weight="1"
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threeseconds_arabe"
                android:background="@drawable/darkthreedelayunselected"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            <Button
                android:textAllCaps="false"
                android:layout_weight="1"
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiveseconds_arabe"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:background="@drawable/darkfivedelayunselected"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:layout_weight=".88"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delaybeforecounting_arabe"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/delaytitle"/>
    </LinearLayout>

</LinearLayout>